[package]
name = "serde_mask"
version = "0.1.0"
edition = "2024"

[lib]
name = "serde_mask"
path = "src/lib.rs"

[dependencies]
aho-corasick = "1.1.4"
fastrand = "2.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_mask_derive = { path = "serde_mask_derive" }

[workspace]
resolver = "2"
members = [
    "serde_mask_derive",
    "serde_mask",
]

