[workspace]
resolver = "2"
members = [
    "serde_mask_derive",
    "serde_mask",
]
default-members = [
    "serde_mask",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Mask sensitive data during serde serialization for LLM ingestion"
repository = "https://github.com/nestyy1337/serde_mask"
keywords = ["serde", "anonymize", "llm", "mask", "secret"]
categories = ["encoding"]
