[package]
name = "serde_mask"
version = "0.1.0"
edition = "2024"

[lib]
name = "serde_mask"
path = "src/lib.rs"


[dependencies]
aho-corasick = "1.1.4"
fastrand = "2.3.0"
serde_mask_derive = { path = "../serde_mask_derive" }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
