[package]
name = "serde_mask_derive"
version = "0.1.1"
edition = "2024"
description.workspace = true
keywords.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true


[lib]
proc-macro = true

[dependencies]
fastrand = "2.3.0"
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = { version = "2.0.111", features = ["extra-traits", "full"] }




